--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -62,6 +62,7 @@ jobs:
     #    uses a compiled language
 
     - run: |
+        java -version
         ./gradlew build
 
     - name: Perform CodeQL Analysis
