--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -38,18 +38,16 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-      
-    # Use Java 1.8
+        
+      # Initializes the CodeQL tools for scanning.
+    - name: Initialize CodeQL
+      uses: github/codeql-action/init@v1
+      with:
+        languages: ${{ matrix.language }}
     - uses: actions/setup-java@v2
       with:
         distribution: 'adopt' # See 'Supported distributions' for available options
         java-version: '8'
-        
-      # Initializes the CodeQL tools for scanning.
-    - name: Initialize CodeQL
-    - uses: github/codeql-action/init@v1
-      with:
-        languages: ${{ matrix.language }}
         # If you wish to specify custom queries, you can do so here or in a config file.
         # By default, queries listed here will override any specified in a config file.
         # Prefix the list here with "+" to use these queries and those in the config file.
